tests/diagnostics/file_roles/exports_declarations/in_binary/expect.txt
# exit: 1
input/main.bin.coppice:1:1: error: exports declarations are only allowed in PACKAGE.coppice
  exports { Token }
  ^
